// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: FavoritesScreen component should render correctly 1`] = `
<div
  className="page "
>
  <div />
  <main
    className="page__main page__main--favorites "
  >
    <div
      className="page__favorites-container container"
    >
      <section
        className="favorites"
      >
        <h1
          className="favorites__title"
        >
          Saved listing
        </h1>
        <ul
          className="favorites__list"
        >
          <li
            className="favorites__locations-items"
            key="Amsterdam"
          >
            <div
              className="favorites__locations locations locations--current"
            >
              <div
                className="locations__item"
              >
                <a
                  className="locations__item-link"
                >
                  <span>
                    Amsterdam
                  </span>
                </a>
              </div>
            </div>
            <OfferList
              blockClassName="favorites"
              offers={
                Array [
                  Object {
                    "id": "4",
                    "isFavorite": false,
                    "isPremium": false,
                    "mainPhoto": "photo",
                    "name": "Paper place",
                    "price": 4,
                    "rating": 4,
                    "type": "room",
                  },
                ]
              }
              onOfferCardBookmarkButtonClick={[Function]}
              onOfferCardMouseEnter={[Function]}
              onOfferCardMouseLeave={[Function]}
            />
          </li>
        </ul>
      </section>
    </div>
  </main>
  <footer
    className="footer container"
  >
    <Link
      className="footer__logo-link"
      to="/"
    >
      <img
        alt="6 cities logo"
        className="footer__logo"
        height="33"
        src="img/logo.svg"
        width="64"
      />
    </Link>
  </footer>
</div>
`;

exports[`snapshot test: FavoritesScreen component should render message without offers 1`] = `
<div
  className="page page--favorites-empty"
>
  <div />
  <main
    className="page__main page__main--favorites page__main--favorites-empty"
  >
    <div
      className="page__favorites-container container"
    >
      <section
        className="favorites favorites--empty"
      >
        <h1
          className="visually-hidden"
        >
          Favorites (empty)
        </h1>
        <div
          className="favorites__status-wrapper"
        >
          <b
            className="favorites__status"
          >
            Nothing yet saved.
          </b>
          <p
            className="favorites__status-description"
          >
            Save properties to narrow down search or plan yor future trips.
          </p>
        </div>
      </section>
    </div>
  </main>
  <footer
    className="footer container"
  >
    <Link
      className="footer__logo-link"
      to="/"
    >
      <img
        alt="6 cities logo"
        className="footer__logo"
        height="33"
        src="img/logo.svg"
        width="64"
      />
    </Link>
  </footer>
</div>
`;
